feat: add laplacian

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ include_directories(include)
 
 add_executable(Tenengrad src/Tenengrad.cu)
 # add_executable(TenengradReduce src/TenengradReduce.cu)
-# add_executable(Laplacian src/Laplacian.cu)
+add_executable(Laplacian src/Laplacian.cu)
 # add_executable(SMDReduce src/SMDReduce.cu)
 # add_executable(Old src/Old.cu)
 # add_executable(Reduce src/Reduce.cu)
@@ -19,7 +19,7 @@ find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 target_link_libraries(Tenengrad ${OpenCV_LIBS})
 # target_link_libraries(TenengradReduce ${OpenCV_LIBS})
-# target_link_libraries(Laplacian ${OpenCV_LIBS})
+target_link_libraries(Laplacian ${OpenCV_LIBS})
 # target_link_libraries(SMDReduce ${OpenCV_LIBS})
 # target_link_libraries(Old ${OpenCV_LIBS})
 target_link_libraries(SMD ${OpenCV_LIBS})
