fix: compile error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,11 @@ set(CMAKE_CUDA_STANDARD 14)
 # add_executable(Old src/Old.cu)
 # add_executable(Reduce src/Reduce.cu)
 # add_executable(SMD src/SMD.cu)
-add_executable(main src/main.cpp)
+add_executable(main src/main.cu)
 
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(include)
-message(${OpenCV_INCLUDE_DIRS})
 # target_link_libraries(Tenengrad ${OpenCV_LIBS})
 # target_link_libraries(TenengradReduce ${OpenCV_LIBS})
 # target_link_libraries(Laplacian ${OpenCV_LIBS})
