--- a/lib/core/CMakeLists.txt
+++ b/lib/core/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(core INTERFACE)
 find_package(OpenCV CONFIG REQUIRED)
-target_include_directories(core INTERFACE ${OpenCV_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/lib/utils/include)
-target_link_libraries(core INTERFACE ${OpenCV_LIBS})
+target_include_directories(core INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(core INTERFACE ${OpenCV_LIBS} utils)
